<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.no0ne.newsapp.MainActivity">

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ListView
                android:id="@+id/news_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </ListView>

            <TextView
                android:id="@+id/empty_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textAppearance="?android:textAppearanceMedium" />

            <ProgressBar
                android:id="@+id/loading_indicator"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:background="#ffffff"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textSize="32sp"
                android:textStyle="bold"
                android:background="#424242"
                android:textColor="#FFFFFF"
                android:text="@string/news_categories" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/politics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:textSize="24sp"
                    android:text="@string/news_type_politics" />

                <RadioButton
                    android:id="@+id/technology"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:textSize="24sp"
                    android:text="@string/news_type_technology" />

                <RadioButton
                    android:id="@+id/movies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:textSize="24sp"
                    android:text="@string/news_type_film" />

                <RadioButton
                    android:id="@+id/football"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:textSize="24sp"
                    android:text="@string/news_type_sport" />

                <RadioButton
                    android:id="@+id/cricket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="@string/news_type_environment" />
            </RadioGroup>
        </LinearLayout>
    </android.support.v4.widget.DrawerLayout>
</RelativeLayout>
